bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: not found: value Message
Message = litMessage()
^BDR:2: error: not found: value Message
if (Message = "R") {droite(); avance();}
    ^BDR:3: error: not found: value Message
else if (Message = "L") {gauche(); avance();}
         ^BDR:4: error: not found: value Message
else if (Message = "I") {droite();droite(); avance();}
         ^BDR:5: error: not found: value Message
else if (Message = "A") {avance();}
         ^BDR:6: error: not found: value Message
else if (Message = "B") {avance(); avance();}
         ^BDR:7: error: not found: value Message
else if (Message = "C") {avance();avance(); avance();}
         ^BDR:8: error: not found: value Message
else if (Message = "Z") {recule();}
         ^BDR:9: error: not found: value Message
else if (Message = "Y") {recule();recule();}
         ^BDR:10: error: not found: value Message
else if (Message = "X") {recule();recule();recule();}
         ^